Fix layout issue with note select

--- a/style.css
+++ b/style.css
@@ -3015,7 +3015,7 @@ button:hover {
   display: flex;
   align-items: center;
   gap: 6px;
-  margin: 0.5em 1em;
+  margin: 0.5em 0;
 }
 .single-note-select-wrap span {
   white-space: nowrap;
